WindLight working (except runes), removed dodging effect, croak, reworked a few other things. Updated resourcepack. Planned rework of light triggering. Now the heal light triggers if the user is poisoned as well, and clears it. Less differently colored particles spawned, added more checks, for poison debuffs and more to come.